# SOFTWARE

Software_project_19476496/: CMakeLists.txt  change_stack.c  change_stack.h  game_init.c  game_init.h  game_init.h.c  game_start.c  game_start.h  input_output.c  input_output.h  main.c  print_board.c  print_board.h  print_stack.c  print_stack.h
