cmake_minimum_required(VERSION 3.15)
project(19476496_Softwareproject_2 C)

set(CMAKE_C_STANDARD 99)

add_executable(19476496_Softwareproject_2 main.c input_output.c input_output.h game_start.c game_start.h game_init.c game_init.h print_board.c print_board.h print_stack.c print_stack.h change_stack.c change_stack.h)